src/objects/Answer_Option__c.object
<CustomObject>
    <description>Where ExAM stores information about potential Answers to Questions.</description>
    <fields>
        <fullName>Dependent_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dependent Question</label>
        <referenceTo>Question_Template__c</referenceTo>
        <relationshipLabel>Answer Options</relationshipLabel>
        <relationshipName>Answer_Options2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Help_Text__c</fullName>
        <label>Help Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Next_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next Question</label>
        <referenceTo>Question_Template__c</referenceTo>
        <relationshipLabel>Answer Options (Next Question)</relationshipLabel>
        <relationshipName>Answer_Options1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_No__c</fullName>
        <label>Order No</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Template__c</fullName>
        <label>Question Template</label>
        <referenceTo>Question_Template__c</referenceTo>
        <relationshipLabel>Answer Options</relationshipLabel>
        <relationshipName>Answer_Options</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight(%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Answer Option</label>
    <nameField>
        <label>Answer Option Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Answer Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>